--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Margox",
   "scripts": {
     "start": "webpack-dev-server --config ./build/webpack.development.js -d --history-api-fallback --no-inline --progress --colors --host 0.0.0.0",
-    "build": "rm -rf dist/ && NODE_ENV=production webpack --config ./build/webpack.production.js --progress --colors && node ./build/scss-output.js",
+    "build": "webpack --config ./build/webpack.production.js --progress --colors && node ./build/scss-output.js",
     "build-output-css": "node ./build/scss-output.js",
     "lint": "node_modules/eslint/bin/eslint.js .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -64,13 +64,15 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "braft-convert": "^2.1.10",
+    "braft-extensions": "0.0.17",
     "braft-finder": "^0.0.18",
     "braft-utils": "^3.0.8",
     "draft-convert": "^2.0.0",
     "draft-js": "^0.10.3",
     "draft-js-multidecorators": "^1.0.0",
     "draftjs-utils": "^0.9.4",
-    "immutable": "~3.7.4"
+    "immutable": "~3.7.4",
+    "react-color": "^2.17.0"
   },
   "peerDependencies": {
     "react": "^15.0.2|| ^16.0.0-rc || ^16.0.0",
